# Starship

./: .bazel_fix_commands.json  .bazelignore  .bazeliskrc  .bazelrc  .commitlintrc.yml  .gitignore  .golangci.yml  .licenserc.yaml  439.3b73ab22.async.js  476.8ea9f122.async.js  498.5d6aece9.async.js  576.3f78350d.async.js  61.311bbe24.chunk.css  61.a88c8a81.async.js  663.3b0bb53b.async.js  859.90a9bf9e.async.js  BUILD.bazel  Makefile  OVERVIEW.md  README.md  WORKSPACE  go.mod  go.sum  index.html  index.yaml  p__404.9e79ce8b.async.js  p__CreateObserve.14e15663.async.js  p__ModuleList.b38ba669.async.js  t__plugin-layout__Layout.ae15cd20.async.js  umi.61f46447.js  umi.8513552f.css
experimental/bcc/: .gitignore  BUILD.bazel  Makefile  README.md  bcc.cc  bcc.go  client.go  server.go  trace_return_value.c
experimental/daniel/: BUILD.bazel
experimental/jian/: BUILD.bazel
experimental/socket-tracer/: .gitignore  BUILD.bazel  Makefile  README.md  main.go  socket_trace.c
experimental/wasi-sdk-cpp/picohttpparser/: BUILD.bazel  Makefile  README.md  libpico.c  libpico2.c  libpico3.c  main-wasmedge.go  main-wasmtime-libpico.go  main-wasmtime-libpico2.go  main-wasmtime-libpico3.go  main-wasmtime.go  main.c  picohttpparser.c  picohttpparser.h
experimental/wasmtime-go/: .gitignore  BUILD.bazel  Makefile  README.md  externref-newmemory-wat.go  hello-multi-args.go  hello-multi-args.wat  hello-world.go  hello-world.wat
experimental/yzhao/: BUILD.bazel
src/agent/cmd/: BUILD.bazel  README.md  agent_image_test.go  config.go  main.go
src/agent/deployer/: BUILD.bazel  README.md  deployer.go  deployer_test.go  module_test.go
src/agent/driver/: BUILD.bazel  README.md  data_buffer.go  module.go  module_test.go  queue.go  queue_test.go
src/agent/proc_info/: BUILD.bazel  collector.go  pid_collector.go  pid_collector_test.go
src/agent/wasm/: BUILD.bazel  README.md  memory.go  memory_layout_test.go  memory_test.go  module.go  module_test.go  utils.go
src/agent/wasm/programs/: BUILD.bazel  Makefile  README.md  struct_test.c  struct_test.wasm
src/agent/wasm/programs/cgo/: BUILD.bazel  README.md  event.go  event.h  ints.go  ints.h  struct-bindgen.h
src/agent/wasm/programs/pico/: BUILD.bazel  Makefile  README.md  main.c  pico.wasm  picohttpparser.c  picohttpparser.h
src/api-server/cmd/: BUILD.bazel  README.md  api_server_image_test.go  main.go
src/api-server/cmd/docs/: BUILD.bazel  README.md  docs.go  swagger.json  swagger.yaml
src/api-server/dao/: BUILD.bazel  README.md  grafana_api_key.go  grafana_api_key_test.go  module.go  module_instance.go  module_instance_state.go  module_instance_test.go  module_test.go  node_agent.go  node_agent_test.go  sqlite.go  sqlite_test.go
src/api-server/grpc/: BUILD.bazel  README.md  deployer.go  deployer_test.go  module.go  pid_collector.go  pid_collector_test.go  server_fixture.go
src/api-server/grpc/fake/: BUILD.bazel  README.md  fake.go  server.go
src/api-server/http/: BUILD.bazel  README.md  client.go  client_test.go  cors.go  exception.go  fake.go  grafana.go  grafana_test.go  http.go  module_manager.go  module_manager_test.go  tricorder.db  types.go  types_test.go
src/api-server/http/api/: BUILD.bazel  README.md  api.go  api_test.go
src/api-server/http/client/: BUILD.bazel  README.md  client.go  client_test.go
src/api-server/http/dao/: BUILD.bazel  README.md  dao.go  module.go  module_instance.go  module_instance_test.go  module_test.go  node_agent.go  node_agent_test.go  sqlite.go
src/api-server/http/docs/: BUILD.bazel  README.md  docs.go  swagger.json  swagger.yaml
src/api-server/http/fake/: BUILD.bazel  README.md  fake.go
src/api-server/http/grafana/: BUILD.bazel  README.md  auth_token.go  config.go  dashboard.go  datasource.go  global.go  grafana.go  grafana_test.go
src/api-server/http/module_manager/: BUILD.bazel  module_manager.go  module_manager_test.go  types.go  types_test.go
src/api-server/http/testdata/: BUILD.bazel  README.md  tricorder_test.db
src/api-server/meta/: BUILD.bazel  README.md  meta.go  meta_test.go  resource_watcher.go  utils.go
src/api-server/pb/: BUILD.bazel  README.md  service.pb.go  service.proto
src/api-server/testing/: BUILD.bazel  sqlite.go
src/api-server/wasm/: BUILD.bazel  README.md  wasm.go  wasm_test.go
src/cli/: BUILD.bazel  DEVELOPMENT.md  README.md  main.go
src/cli/cmd/: BUILD.bazel  README.md  root.go
src/cli/cmd/agent/: BUILD.bazel  README.md  agent.go  list.go
src/cli/cmd/module/: BUILD.bazel  README.md  create.go  delete.go  deploy.go  init.go  list.go  module.go  undeploy.go  upload.go
src/cli/internal/model/: BUILD.bazel  response.go
src/cli/internal/outputs/: BUILD.bazel  output.go  output_test.go
src/cli/internal/outputs/json/: BUILD.bazel  json.go  json_test.go
src/cli/internal/outputs/table/: BUILD.bazel  README.md  table.go  table_test.go
src/cli/internal/outputs/yaml/: BUILD.bazel  yaml.go  yaml_test.go
src/cli/pkg/: README.md
src/cli/pkg/kubernetes/: BUILD.bazel  client.go  common.go
src/cli/pkg/model/: BUILD.bazel  README.md  response.go
src/cli/pkg/output/: BUILD.bazel  output.go  output_test.go
src/cli/pkg/outputs/: BUILD.bazel  output.go  output_test.go
src/cli/pkg/outputs/json/: BUILD.bazel  README.md  json.go  json_test.go
src/cli/pkg/outputs/table/: BUILD.bazel  table.go  table_test.go
src/cli/pkg/outputs/yaml/: BUILD.bazel  README.md  (+1 more)
src/integ-tests/: BUILD.bazel  README.md  module_deploy_test.go
src/integ_tests/: BUILD.bazel  module_deploy_test.go
src/load/: BUILD.bazel  README.md  main.go
src/load/load/: BUILD.bazel  README.md  load.go  root.go
src/pb/module/: BUILD.bazel  README.md  module.pb.go  module.proto
src/pb/module/common/: BUILD.bazel  common.pb.go  common.proto
src/pb/module/ebpf/: BUILD.bazel  README.md  ebpf.pb.go  ebpf.proto
src/pb/module/wasm/: BUILD.bazel  wasm.pb.go  wasm.proto
src/testing/bazel/: BUILD.bazel  README.md  bazel.go  bazel_test.go
src/testing/docker/: BUILD.bazel  cli.go  cli_test.go  runner.go  runner_test.go
src/testing/docker/testdata/: BUILD.bazel  README.md  main.go
(+447 files in other folders)
