load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "daniel_lib",
    srcs = ["hello_world.go"],
    importpath = "github.com/tricorder/experimental/daniel",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "daniel",
    embed = [":daniel_lib"],
    visibility = ["//visibility:public"],
)
