load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "integ-tests_test",
    srcs = ["module_deploy_test.go"],
    deps = [
        "//src/api-server/http",
        "//src/api-server/http/dao",
        "//src/testing/bazel",
        "//src/testing/grafana",
        "//src/testing/pg",
        "//src/utils/cond",
        "//src/utils/lock",
        "//src/utils/sys",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
