load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "deployer",
    srcs = ["deployer.go"],
    importpath = "github.com/tricorder/src/agent/deployer",
    visibility = ["//visibility:public"],
    deps = [
        "//src/agent/driver",
        "//src/api-server/pb",
        "//src/utils/errors",
        "//src/utils/grpc",
        "//src/utils/grpcerr",
        "//src/utils/log",
        "//src/utils/pg",
        "//src/utils/uuid",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_sync//errgroup",
    ],
)

go_test(
    name = "deployer_test",
    srcs = ["deployer_test.go"],
    data = [
        "//modules/sample_json:module",
    ],
    embed = [":deployer"],
    tags = ["bpf"],
    deps = [
        "//src/agent/ebpf/bcc/linux_headers",
        "//src/api-server/pb",
        "//src/pb/module",
        "//src/pb/module/common",
        "//src/pb/module/ebpf",
        "//src/pb/module/wasm",
        "//src/testing/bazel",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@org_golang_google_grpc//:go_default_library",
    ],
)
