load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wasm",
    srcs = [
        "memory.go",
        "module.go",
        "utils.go",
    ],
    importpath = "github.com/tricorder/src/agent/wasm",
    visibility = ["//visibility:public"],
    # gazelle keeps adding:
    # @com_github_bytecodealliance_wasmtime_go_v3//:wasmtime-go
    # which does not exit.
    #
    # You should remove the `keep` below, run `tools/gazelle.sh` and then remove
    # @com_github_bytecodealliance_wasmtime_go_v3//:wasmtime-go
    # and then add back `keep`.
    #
    # keep
    deps = [
        "//src/utils/file",
        "@com_github_bytecodealliance_wasmtime_go_v3//:go_default_library",
        "@com_github_sirupsen_logrus//:logrus",
    ],
)

go_test(
    name = "wasm_test",
    srcs = [
        "memory_layout_test.go",
        "memory_test.go",
        "module_test.go",
    ],
    data = [
        "//modules/sample_json:module",
        "//src/agent/wasm/programs:wasm",
        "//src/agent/wasm/programs:wat",
        "//src/agent/wasm/programs/pico:pico_wasm",
    ],
    embed = [":wasm"],
    deps = [
        "//src/agent/wasm/programs/cgo",
        "//src/testing/bazel",
        "//src/testing/sys",
        "//src/utils/file",
        "@com_github_stretchr_testify//assert",
    ],
)
