load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "dao",
    srcs = [
        "module.go",
        "module_instance.go",
        "node_agent.go",
        "sqlite.go",
    ],
    importpath = "github.com/tricorder/src/api-server/dao",
    visibility = ["//visibility:public"],
    deps = [
        "//src/utils/log",
        "//src/utils/sqlite",
    ],
)

go_test(
    name = "dao_test",
    srcs = [
        "module_instance_test.go",
        "module_test.go",
        "node_agent_test.go",
        "sqlite_test.go",
    ],
    embed = [":dao"],
    deps = [
        "//src/api-server/pb",
        "//src/testing/bazel",
        "//src/utils/uuid",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
