load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = [
        "client.go",
        "cors.go",
        "exception.go",
        "fake.go",
        "grafana.go",
        "http.go",
        "module_manager.go",
        "types.go",
    ],
    importpath = "github.com/tricorder/src/api-server/http",
    visibility = [
        "//src/api-server:__subpackages__",
        "//src/cli:__subpackages__",
    ],
    deps = [
        "//src/api-server/http/api",
        "//src/api-server/http/dao",
        "//src/api-server/http/grafana",
        "//src/api-server/pb",
        "//src/pb/module/common",
        "//src/pb/module/ebpf",
        "//src/pb/module/wasm",
        "//src/utils/cond",
        "//src/utils/errors",
        "//src/utils/lock",
        "//src/utils/log",
        "//src/utils/pg",
        "//src/utils/sqlite",
        "//src/utils/uuid",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
    ],
)

# Pre-built sqlite db file for storing a list pre-defined eBPF+WASM modules.
filegroup(
    name = "tricorder_db",
    srcs = ["tricorder.db"],
    visibility = ["//src/api-server:__subpackages__"],
)

go_test(
    name = "http_test",
    srcs = [
        "client_test.go",
        "grafana_test.go",
        "module_manager_test.go",
        "types_test.go",
    ],
    data = ["//src/api-server/http/testdata:tricorder_test_db"],
    embed = [":http"],
    deps = [
        "//src/api-server/http/dao",
        "//src/api-server/http/grafana",
        "//src/api-server/pb",
        "//src/testing/bazel",
        "//src/testing/grafana",
        "//src/testing/pg",
        "//src/utils/cond",
        "//src/utils/lock",
        "//src/utils/uuid",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
