load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "http",
    srcs = [
        "cors.go",
        "exception.go",
        "http.go",
        "types.go",
    ],
    importpath = "github.com/tricorder/src/api-server/http",
    visibility = [
        "//src/api-server:__subpackages__",
        "//src/cli:__subpackages__",
        "//src/integ-tests:__subpackages__",
    ],
    deps = [
        "//src/api-server/http/api",
        "//src/api-server/http/dao",
        "//src/api-server/http/grafana",
        "//src/api-server/pb",
        "//src/api-server/wasm",
        "//src/pb/module/common",
        "//src/pb/module/ebpf",
        "//src/pb/module/wasm",
        "//src/utils/cond",
        "//src/utils/errors",
        "//src/utils/lock",
        "//src/utils/log",
        "//src/utils/pg",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_swaggo_files//:files",
        "@com_github_swaggo_gin_swagger//:gin-swagger",
    ],
)

# Pre-built sqlite db file for storing a list pre-defined eBPF+WASM modules.
filegroup(
    name = "tricorder_db",
    srcs = ["tricorder.db"],
    visibility = ["//src/api-server:__subpackages__"],
)

go_test(
    name = "http_test",
    srcs = ["types_test.go"],
    data = ["//src/api-server/http/testdata:tricorder_test_db"],
    embed = [":http"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_stretchr_testify//assert",
    ],
)
