load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "service_proto",
    srcs = ["service.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//src/pb/module:module_proto",
    ],
)

go_proto_library(
    name = "service_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/tricorder/src/api-server/pb",
    proto = ":service_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//src/pb/module",
    ],
)

go_library(
    name = "pb",
    embed = [":service_go_proto"],
    importpath = "github.com/tricorder/src/api-server/pb",
    visibility = ["//visibility:public"],
)
