load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    testonly = 1,
    srcs = ["sqlite.go"],
    importpath = "github.com/tricorder/src/api-server/testing",
    visibility = ["//src/api-server:__subpackages__"],
    deps = [
        "//src/api-server/dao",
        "//src/api-server/pb",
        "//src/utils/log",
    ],
)
