load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    srcs = ["sqlite.go"],
    importpath = "github.com/tricorder/src/api-server/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api-server/http/dao",
        "//src/api-server/pb",
        "//src/utils/log",
        "//src/utils/sqlite",
    ],
)
