load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "wasm",
    srcs = ["wasm.go"],
    importpath = "github.com/tricorder/src/api-server/wasm",
    visibility = ["//visibility:public"],
    deps = [
        "//src/utils/errors",
        "//src/utils/file",
        "//src/utils/uuid",
    ],
)

go_test(
    name = "wasm_test",
    srcs = ["wasm_test.go"],
    data = [
        "//modules/common:wasm_common_includes",
        "@download_wasi_sdk_from_github_url//file",
    ],
    embed = [":wasm"],
    deps = [
        "//src/testing/bazel",
        "//src/utils/log",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
