load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "cmd",
    srcs = ["root.go"],
    importpath = "github.com/tricorder/src/cli/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//src/cli/cmd/agent",
        "//src/cli/cmd/module",
        "//src/utils/log",
        "@com_github_spf13_cobra//:cobra",
        "@com_github_spf13_viper//:viper",
    ],
)
