load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "load",
    srcs = [
        "load.go",
        "root.go",
    ],
    importpath = "github.com/tricorder/src/load/load",
    visibility = ["//visibility:public"],
    deps = [
        "//src/api-server/dao",
        "//src/pb/module",
        "//src/utils/file",
        "//src/utils/log",
        "//src/utils/uuid",
        "@com_github_spf13_cobra//:cobra",
    ],
)
